--- a/coverageCommandLineConfig.properties
+++ b/coverageCommandLineConfig.properties
@@ -1,4 +1,6 @@
-apk=./apk
+apk=./apks
 onlyAppPackage=true
 printToLogcat=false
 outputDir=./instrumentedApks
+replaceMonitorServer=true
+addInternetPermission=true
