--- a/src/main/resources/coverageCommandLineConfig.properties
+++ b/src/main/resources/coverageCommandLineConfig.properties
@@ -4,3 +4,6 @@ printToLogcat=false
 outputDir=./instrumentedApks
 useAppt2=false
 packageName=
+replaceMonitorServer=false
+addInternetPermission=true
+logLifeCycleMethod=false
